Add seniority service.

--- a/src/RecruitmentManager/appsettings.json
+++ b/src/RecruitmentManager/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PaymentApiConnectionString": "Server=(localdb)\\DEVELOPMENT;Database=RecruitmentManager;Trusted_Connection=true;"
+  }
 }
